refactor(fjage): modernise core package data types and idioms
Mechanical modernisation of org.arl.fjage, split out of the combined port
so the behavioural fixes can be reviewed separately (see the follow-up
branch). Ported from 22b2c2dd on the old fjage-modernization branch.

- StringBuffer -> StringBuilder in LogFormatter, BriefLogFormatter;
  replaceAll -> replace where the pattern is a literal.
- @FunctionalInterface on Callback, MessageFilter, MessageListener;
  method refs and lambdas in MessageBehavior and Agent.receive().
- volatile on the quit flag of Backoff/Poisson/Ticker/Waker behaviours
  and Agent.StoppableMessageBehavior.
- Concurrent collections in place of synchronized wrappers and manual
  locking: Agent.newBehaviors -> ConcurrentLinkedQueue, Container.idle ->
  ConcurrentHashMap.newKeySet(), Platform.containers ->
  CopyOnWriteArrayList, AgentLocalRandom.rng -> ConcurrentHashMap.
- MessageQueue LinkedList -> ArrayDeque; Agent.exclusions Stack ->
  ArrayDeque. ArrayDeque rejects nulls, so a null receive() filter is now
  pushed as the ANY_MESSAGE sentinel; MessageQueue.commit() already
  treated null as "exclude everything", so this is behaviour-preserving.
- Container: cls.newInstance() -> cls.getDeclaredConstructor()
  .newInstance(); keySet()-then-get() loops -> values().forEach().

Two swaps have a visible consequence worth a second look:

- Platform.getHostname() returns "localhost" for an interface with no
  IPv4 address, where the old Enumeration loop threw
  NoSuchElementException.
- RealTimePlatform now schedules on a ScheduledExecutorService. A
  java.util.Timer dies when a scheduled task throws, silently stopping
  every later timer; the executor survives it.

Claude-Session: https://claude.ai/code/session_01Xo2cSp6wa1QkmQLi4hNdGH